[Terry N.] update notes

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         </li>
                         <li class="listitem">
                             <p><span class="guilabel"><strong>Activity log</strong></span> - it's good to monitor SUMOjEdit from jEdit's
-                            activity log by Utilities->Troubleshooting->Activity Log.</p>
+                            activity log by Utilities->Troubleshooting->Activity Log. When the dialog is open, select tail to get continuous updates</p>
                         </li>
                     </ul>
                 </div>
