[Terry N.] update info

--- a/index.html
+++ b/index.html
@@ -141,14 +141,17 @@
                         <li class="listitem">
                             <p><span class="guilabel"><strong>Other functions</strong></span> - are "format axioms"
                                 which will reformat a highlighted axiom with standard SUMO indentation.
-                                "go to definition" will make a guess at where the definition for a selected term starts and put the
-                                cursor at that point in the file. "browse term in Sigma" will open the public Sigma site in your browser
-                                opened on the selected term.</p>
+                                "go to definition" will make a guess at where the definition for a selected term starts, open the source file and put the
+                                cursor at that point in the source file. "browse term in Sigma" will open the public Sigma site in your browser
+                                opened on the selected term.
+                                When typing SUO-KIF in the editor, use either Cntl+Space (universal), or Opt+Tab (macOS) to activate the completion menu.</p>
                         </li>
                         <li class="listitem">
                             <p><span class="guilabel"><strong>Activity log</strong></span> - it's good to monitor SUMOjEdit from jEdit's
                             activity log by Utilities->Troubleshooting->Activity Log. When the dialog is open, select tail to get continuous updates.
-                            Dock the dialog to the base area of jEdit to monitor continuously.</p>
+                            Dock the dialog to the base area of jEdit to monitor continuously.
+                            When the dialog is open, select tail to get continuous updates.
+                            Dock the dialog to the base area of jEdit to monitor continuously. Same with the ErrorList Dialog</p>
                         </li>
                     </ul>
                 </div>
